# test_for_tender_pro

./: Makefile  README.md  main.py  pyproject.toml  report.xlsx  test.py  test.xlsx  test_data.py
domain/entities/: offer.py  tender.py
domain/mappers/: offer.py  tender.py
dto/api/: offer.py  tender.py
reports/: excel_service.py  models.py  prepare.py
