[project]
name = "test-for-tender-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 88               
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]       
ignore = ["E501"]              
fixable = ["ALL"]                                 

[tool.ruff.format]
quote-style = "double"         
indent-style = "space"         
